Command line tool for SSO configuration

--- a/vmidentity/configure.ac
+++ b/vmidentity/configure.ac
@@ -409,6 +409,7 @@ AC_CONFIG_FILES([Makefile
                  sts/Makefile
                  rest/Makefile
                  install/Makefile
+                 sso-config/Makefile
                 ])
 AC_OUTPUT
 
