--- a/vmidentity/lightwaveui/build.xml
+++ b/vmidentity/lightwaveui/build.xml
@@ -29,19 +29,52 @@
    <property name="build.packages.samltoken"
              value="${build.packages}/samltoken.jar" />
    <path id="classpath.runtime-dependencies">
-		 <pathelement location="${TomcatHome}/lib/servlet-api.jar" />
+	    <pathelement location="${TomcatHome}/lib/servlet-api.jar" />
+	    <fileset refid="jar-set.LOG4J2"/>
+	    <fileset refid="jar-set.opensaml.endorsed" />
+	    <fileset refid="jar-set.spring-framework-4.0.6" />
+	    <fileset refid="jar-set.jstl-1.2" />
+	    <fileset refid="jar-set.asm" />
+	    <fileset refid="jar-set.apache-commons-lang" />
+	    <fileset refid="jar-set.opensaml-lib" />
+	    <fileset refid="jar-set.apache-httpclient" />
+	    <fileset refid="jar-set.cglib" />
+	    <fileset refid="jar-set.velocity" />
+	    <fileset refid="jar-set.commons-collections" />
+	    <fileset refid="jar-set.esapi" />
+	    <fileset refid="jar-set.bouncy-castle" />
+	    <pathelement location="${build.packages.samlauthority}"/>
+	    <pathelement location="${build.packages.vmware-identity-idm-client}"/>
+	    <pathelement location="${build.packages.vmware-identity-idm-interface}"/>
+	    <pathelement location="${build.packages.websso-client}"/>
+	    <pathelement location="${build.packages.samltoken}"/>
+	    <pathelement location="${buildRoot}/packages/vmware-identity-diagnostics.jar" />
+	    <restrict>
+	     <fileset refid="jar-set.opensaml-lib" />
+	       <rsel:not>
+	          <rsel:name name="opensaml-2.5.2?lib?servlet-api-*.jar" />
+	       </rsel:not>
+	    </restrict>
    </path>
    
    <path id="classpath.webapp-libs">
+      <pathelement location="${build.packages.main}" />
+      <path refid="classpath.runtime-dependencies" />
    </path>
 
    <path id="classpath.main">
-	   <path refid="classpath.runtime-dependencies" />
+      <path refid="classpath.runtime-dependencies" />
+      <fileset refid="jar-set.apache-httpclient" />
    </path>
 
    <path id="classpath.test">
+      <path refid="classpath.main" />
+      <pathelement location="${build.packages.main}"/>
+      <fileset refid="jar-set.junit" />
+      <fileset refid="jar-set.easymock" />
+      <fileset refid="jar-set.objenesis" />
    </path>
-
+  
    <target name="generate-webapp-manifest" if="target-set.webapp">
       <manifest file="${build.packing.webapp-manifest_mf}">
             <!-- Main Section:-->
