Open lightwave firewall ports via firewall service script.         Service start will run a python script which parses a json file and an applies the rules accordingly.
Change-Id: I8a7f591cb5dc264c11d9a8d82de09cea9d9fa702

--- a/config/configure.ac
+++ b/config/configure.ac
@@ -423,6 +423,12 @@ AC_SUBST(VMCA_LIBS)
 pscsetupbindir=$prefix/bin
 AC_SUBST(pscsetupbindir)
 
+systemddir=/lib/systemd/system
+AC_SUBST(systemddir)
+
+scriptsconfdir="$datadir/config"
+AC_SUBST(scriptsconfdir)
+
 pscsetupjarsdir=$prefix/jars
 AC_SUBST(pscsetupjarsdir)
 
