Adding error messages similar to vmafd join and promote for ic-join and ic-promote.
Change-Id: I24f73560f849b676ae105af867755ac333a46aac

--- a/config/tools/ic-join/Makefile.am
+++ b/config/tools/ic-join/Makefile.am
@@ -6,6 +6,8 @@ ic_join_SOURCES = \
 ic_join_CPPFLAGS = \
     -I$(top_srcdir)/include \
     -I$(top_srcdir)/include/public \
+    @VMDIR_INCLUDES@ \
+    @VMAFD_INCLUDES@ \
     @LW_INCLUDES@
 
 ic_join_LDADD = \
