Add governsid field to schema editor UI, added error code in logs, minor fix for management view for PSC Site management UI
Change-Id: I90c81a1625aad2f7552c46c0d8087b4f96748d1e

--- a/tools/common/VMPSCHighAvailability.Common/VMPSCHighAvailability.Common.csproj
+++ b/tools/common/VMPSCHighAvailability.Common/VMPSCHighAvailability.Common.csproj
@@ -66,6 +66,7 @@
     <Compile Include="DTO\ManagementDto.cs" />
     <Compile Include="DTO\NodeDto.cs" />
     <Compile Include="DTO\ServiceDto.cs" />
+    <Compile Include="Helpers\CustomExceptionExtractor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTO\ServerDto.cs" />
     <Compile Include="DTO\PscDto.cs" />
