--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -24,7 +24,8 @@ LOTUS_ADMIN_PASSWORD_DEFAULT=
 LOTUS_PARTNER_HOSTNAME=
 LOTUS_SITE_NAME=Default-first-site
 LOTUS_HOSTNAME=
-USAGE="configure-lightwave-server --password <password> [--domain <domain-name>] [--server <partner-host-name>] [--site <site-name>] [--hostname <hostname | IP Address>] [--config-file <configuration file>]"
+LOTUS_DNS_FORWARDERS=
+USAGE="configure-lightwave-server --password <password> [--domain <domain-name>] [--server <partner-host-name>] [--site <site-name>] [--hostname <hostname | IP Address>] [--dns-forwarders <comma-separated list of IP Addresses>] [--config-file <configuration file>]"
 export SUPPORT_RHTTP_PROXY=0
 
 # Read passed parameters.
@@ -56,6 +57,9 @@ if [ $# -gt 0 ]; then
                     "--config-file")
                       MODE="config-file"
                       ;;
+                    "--dns-forwarders")
+                      MODE="dns-forwarders"
+                      ;;
                     *)
                       echo "Invalid parameter : $arg"
                       echo $USAGE
@@ -83,6 +87,10 @@ if [ $# -gt 0 ]; then
                 LOTUS_HOSTNAME=$arg
                 MODE=open
                 ;;
+             "dns-forwarders")
+                LOTUS_DNS_FORWARDERS=$arg
+                MODE=open
+                ;;
              "config-file")
                 LOTUS_CONFIG_FILE=$arg
                 MODE=open
@@ -107,6 +115,7 @@ if [ -f "$LOTUS_CONFIG_FILE" ]; then
     LOTUS_SITE_NAME=$(grep "^site-name=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
     LOTUS_HOSTNAME=$(grep "^hostname=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
     LOTUS_FIRST_INSTANCE=$(grep "^first-instance=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
+    LOTUS_DNS_FORWARDERS=$(grep "^dns-forwarders=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
 fi
 
 if [ -z "$LOTUS_HOSTNAME" ]; then
@@ -180,13 +189,20 @@ JAVA_HOME=@JAVA_HOME@
 CLASSPATH=$CLASSPATH:/opt/vmware/jars/*
 JAVA_SEC_PROP=/etc/vmware/java/vmware-override-java.security
 
+LOTUS_DNS_FORWARDERS_ARG =
+
+if [ ! -z "$LOTUS_DNS_FORWARDERS" ]; then
+    LOTUS_DNS_FORWARDERS_ARG = "--dns-forwarders $LOTUS_DNS_FORWADERS"
+fi
+
 case "$LOTUS_DEPLOYMENT" in
     "standalone")
         $JAVA_HOME/bin/java -Djava.security.properties=$JAVA_SEC_PROP -cp $CLASSPATH \
            com.vmware.pscsetup.PlatformServicesControllerDeploy \
            --mode "standalone" --domain $LOTUS_DOMAIN_DEFAULT --password "$LOTUS_ADMIN_PASSWORD_DEFAULT" \
            --site $LOTUS_SITE_NAME \
-           --hostname $LOTUS_HOSTNAME
+           --hostname $LOTUS_HOSTNAME \
+           $LOTUS_DNS_FORWARDERS_ARG
            ;;
     "partner")
         $JAVA_HOME/bin/java -Djava.security.properties=$JAVA_SEC_PROP -cp $CLASSPATH \
@@ -194,7 +210,8 @@ case "$LOTUS_DEPLOYMENT" in
            --mode "partner" --domain $LOTUS_DOMAIN_DEFAULT --password "$LOTUS_ADMIN_PASSWORD_DEFAULT" \
            --site $LOTUS_SITE_NAME \
            --server $LOTUS_PARTNER_HOSTNAME \
-           --hostname $LOTUS_HOSTNAME
+           --hostname $LOTUS_HOSTNAME \
+           $LOTUS_DNS_FORWARDERS_ARG
            ;;
 esac
 
