--- a/config/tools/ic-join/Makefile.am
+++ b/config/tools/ic-join/Makefile.am
@@ -10,6 +10,10 @@ ic_join_CPPFLAGS = \
 
 ic_join_LDADD = \
     @top_builddir@/cfgutils/libcfgutils.la \
+    @VMAFD_LIBS@ \
+    @VMCA_LIBS@ \
+    @VMDNS_LIBS@ \
+    @VMDIR_LIBS@ \
     @LWSM_LIBS@ \
     @LWADVAPI_LIBS@ \
     @LWIO_LIBS@ \
@@ -24,6 +28,7 @@ ic_join_LDADD = \
     @PTHREAD_LIBS@
 
 ic_join_LDFLAGS = \
+    @VMDNS_LDFLAGS@ \
     @VMCA_LDFLAGS@ \
     @VMAFD_LDFLAGS@ \
     @VMDIR_LDFLAGS@ \
