--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -189,10 +189,10 @@ JAVA_HOME=@JAVA_HOME@
 CLASSPATH=$CLASSPATH:/opt/vmware/jars/*
 JAVA_SEC_PROP=/etc/vmware/java/vmware-override-java.security
 
-LOTUS_DNS_FORWARDERS_ARG =
+LOTUS_DNS_FORWARDERS_ARG=
 
 if [ ! -z "$LOTUS_DNS_FORWARDERS" ]; then
-    LOTUS_DNS_FORWARDERS_ARG = "--dns-forwarders $LOTUS_DNS_FORWADERS"
+    LOTUS_DNS_FORWARDERS_ARG="--dns-forwarders $LOTUS_DNS_FORWADERS"
 fi
 
 case "$LOTUS_DEPLOYMENT" in
