Fix to get container build to use locally built vmware-lightwave-server RPM
Change-Id: I337647d0e4547628c9001bc4d55996d74b75c7ed

--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -4,7 +4,7 @@ ENV container=docker
 VOLUME ["/sys/fs/cgroup"]
 
 # install systemd
-RUN tdnf update -y tdnf; \
+RUN tdnf update --refresh -y tdnf; \
     tdnf update -y rpm; \
     tdnf install -y systemd; \
     # Remove unused systemd services
