Add DNS Forwarders through configure-lightwave-server script
Change-Id: I9f7a0390d1bcc75b6a859391cd97f711c4f70c04

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,21 @@ tools/win/logs
 tools/x64
 vmidentity/lightwaveui/target
 tools/win/wininstaller/wininstaller.v12.suo
+*/m4
+*/**/Makefile.in
+*/**/config.log
+*/**/config.status
+*/**/config.guess
+*/**/config.sub
+*/**/config.h.in*
+*/**/autom4te.cache/*
+*/**/install-sh
+*/**/ltmain.sh
+*/**/configure
+*/**/depcomp
+*/**/compile
+*/**/missing
+*/build/rpmbuild
+*/build/libtool
+*/build/Makefile
+stage/*
