Minor version update for Maven publish.

--- a/vmidentity/openidconnect/client/pom.xml
+++ b/vmidentity/openidconnect/client/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect-client-lib</artifactId>
-    <version>6.5.0</version>
+    <version>6.5.1</version>
 
     <properties>
         <java.version>1.7</java.version>
@@ -132,7 +132,7 @@
         <repository>
             <id>lightwave</id>
             <name>lightwave</name>
-            <url>http://artifactory.ec.eng.vmware.com:8081/artifactory/lightwave</url>
+            <url>https://api.bintray.com/maven/vmware/lightwave-maven/lightwave</url>
         </repository>
     </distributionManagement>
 
