--- a/vmidentity/rest/pom.xml
+++ b/vmidentity/rest/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.vmware.identity.rest</groupId>
   <artifactId>vmware-identity-rest</artifactId>
-  <version>6.5.0</version>
+  <version>6.5.1</version>
   <packaging>pom</packaging>
 
   <name>vmware-identity-rest</name>
@@ -12,7 +12,7 @@
     <repository>
        <id>lightwave</id>
        <name>lightwave</name>
-       <url>http://artifactory.ec.eng.vmware.com:8081/artifactory/lightwave</url>
+       <url>https://api.bintray.com/maven/vmware/lightwave-maven/lightwave</url>
     </repository>
   </distributionManagement>
 
@@ -29,7 +29,7 @@
     <java.version>1.7</java.version>
     <jersey.version>2.12</jersey.version>
     <javax.servlet.version>3.1.0</javax.servlet.version>
-    <vmware.version>6.5.0</vmware.version>
+    <vmware.version>6.5.1</vmware.version>
 
     <javax.ws.rs.version>2.0.1</javax.ws.rs.version>
     <jackson.version>2.3.2</jackson.version>
