--- a/vmidentity/openidconnect/server/pom.xml
+++ b/vmidentity/openidconnect/server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.vmware.identity</groupId>
         <artifactId>vmware-identity-oidc</artifactId>
-        <version>6.5.0</version>
+        <version>6.5.1</version>
     </parent>
 
     <groupId>com.vmware.identity</groupId>
@@ -14,7 +14,7 @@
 
     <properties>
         <java.version>1.7</java.version>
-        <vmware.version>6.5.0</vmware.version>
+        <vmware.version>6.5.1</vmware.version>
         <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
         <springframework.version>4.0.6.RELEASE</springframework.version>
         <jstl.version>1.2</jstl.version>
@@ -240,5 +240,12 @@
             <artifactId>log4j-api</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+	
+	<dependency>
+		<groupId>xml-apis</groupId>
+<artifactId>xml-apis</artifactId>
+<version>1.4.01</version>
+	</dependency>
+	
     </dependencies>
 </project>
