Lightwave Directory UI bug fix: Unable to login to the VMDir UI tool for vSphere RC & Beta3 builds. (cln 4445159)
Change-Id: Idc0ef85f139a3681a25506bc1be192da6e7e45c3

--- a/tools/common/VMDir.Common/VMDir.Common.csproj
+++ b/tools/common/VMDir.Common/VMDir.Common.csproj
@@ -52,9 +52,12 @@
     <Compile Include="DTO\VMDirServerDTO.cs" />
     <Compile Include="Schema\AttributeTypeDTO.cs" />
     <Compile Include="Schema\AttributeTypeManager.cs" />
+    <Compile Include="Schema\ManagerBase.cs" />
     <Compile Include="Schema\ObjectClassDTO.cs" />
     <Compile Include="Schema\ObjectClassManager.cs" />
+    <Compile Include="Schema\ParserHelperDTO.cs" />
     <Compile Include="Schema\SchemaManager.cs" />
+    <Compile Include="Schema\SchemaValueParser.cs" />
     <Compile Include="Schema\SyntaxDefs.cs" />
     <Compile Include="VMDirUtilities\LdapConnectionService.cs" />
     <Compile Include="VMDirUtilities\Utilities.cs" />
