--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -25,7 +25,8 @@ LOTUS_PARTNER_HOSTNAME=
 LOTUS_SITE_NAME=Default-first-site
 LOTUS_HOSTNAME=
 LOTUS_DNS_FORWARDERS=
-USAGE="configure-lightwave-server --password <password> [--domain <domain-name>] [--server <partner-host-name>] [--site <site-name>] [--hostname <hostname | IP Address>] [--dns-forwarders <comma-separated list of IP Addresses>] [--config-file <configuration file>]"
+DISABLE_DNS=0
+USAGE="configure-lightwave-server --password <password> [--domain <domain-name>] [--server <partner-host-name>] [--site <site-name>] [--hostname <hostname | IP Address>] [--dns-forwarders <comma-separated list of IP Addresses>] [--disable-dns] [--config-file <configuration file>]"
 export SUPPORT_RHTTP_PROXY=0
 
 # Read passed parameters.
@@ -59,6 +60,9 @@ if [ $# -gt 0 ]; then
                       ;;
                     "--dns-forwarders")
                       MODE="dns-forwarders"
+                      ;;
+                    "--disable-dns")
+                      DISABLE_DNS=1
                       ;;
                     *)
                       echo "Invalid parameter : $arg"
@@ -116,6 +120,7 @@ if [ -f "$LOTUS_CONFIG_FILE" ]; then
     LOTUS_HOSTNAME=$(grep "^hostname=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
     LOTUS_FIRST_INSTANCE=$(grep "^first-instance=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
     LOTUS_DNS_FORWARDERS=$(grep "^dns-forwarders=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
+    DISABLE_DNS=$(grep "^disable-dns=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
 fi
 
 if [ -z "$LOTUS_HOSTNAME" ]; then
@@ -149,6 +154,10 @@ esac
 # Stop all services as a precaution.
 if [ -x /etc/init.d/vmcad ]; then
      /etc/init.d/vmcad stop
+fi
+
+if [ -x /etc/init.d/vmdnsd ]; then
+     /etc/init.d/vmdnsd stop
 fi
 
 if [ -x /etc/init.d/vmdird ]; then
@@ -194,6 +203,19 @@ LOTUS_DNS_FORWARDERS_ARG=
 if [ ! -z "$LOTUS_DNS_FORWARDERS" ]; then
     LOTUS_DNS_FORWARDERS_ARG="--dns-forwarders $LOTUS_DNS_FORWARDERS"
 fi
+
+case $DISABLE_DNS in
+    1)
+        echo "Disabling DNS Listener..."
+        /opt/likewise/bin/lwregshell set_value '[HKEY_THIS_MACHINE\Services\vmdns\Parameters]' EnableDNSProtocol 0
+        if [ $? -ne 0 ]; then
+            echo "Failed to disable DNS Listener"
+            exit 1
+        fi
+        ;;
+    *)
+        ;;
+esac
 
 case "$LOTUS_DEPLOYMENT" in
     "standalone")
