Support option to turn off the VMAFD DCERPC listener. This is supported only on the Lightwave Client and not on the server.
Change-Id: I982015b2d90f30a8fa833182c5932882ede4ed82

--- a/config/configure.ac
+++ b/config/configure.ac
@@ -127,6 +127,8 @@ saved_CPPFLAGS="$CPPFLAGS"
 CPPFLAGS="$CPPFLAGS $LW_INCLUDES $OPENSSL_INCLUDES"
 AC_CHECK_HEADERS(lw/base.h lw/types.h uuid/uuid.h lwrpcrt/lwrpcrt.h dce/rpc.h)
 AC_CHECK_HEADERS(lwsm/lwsm.h)
+AC_CHECK_HEADERS(reg/lwreg.h)
+AC_CHECK_HEADERS(reg/regutil.h)
 CPPFLAGS="$saved_CPPFLAGS"
 
 # VMDIR component
