Support for container upgrade
configure-lightwave-server.service
        Removed lwsm as a dependency for configure-lightwave-server as lwsm. Lwsm attempts to start all component services and fails if vmdir schema has not been patched.
configure-lightwave-server.in
        Start lwsm as needed since it will not be started as a dependent service.
        Added logic to detect container upgrade and call the appropriate scripts.
        Restart lwsm at end to finalize upgrades.
vmdir_upgrade.sh
        Put the directory into non-replication state before running vdcupgrade.
        Remove SAM account stuff, it was a workaround for vc 5.5 bug

Change-Id: Ia3894510e6a477cca2b7ea115d78461e59622c0a

--- a/support/docker/configure-lightwave-server.service
+++ b/support/docker/configure-lightwave-server.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=Lightwave Server Configuration Service
-After=syslog.target network.target lwsmd.service
-Requires=lwsmd.service
+After=syslog.target network.target
 
 [Service]
 Type=oneshot
