Fix for bug 1721970
New transaction based index cache update mechanism to support complex
update scenarios

Index update used to be done by calling any combination of:
- VmDirIndexSchedule
- VmDirIndexDelete
- VmDirIndexAddUniquenessScope
- VmDirIndexDeleteUniquenessScope

Now it has to be done in the following order:
1. VmDirIndexUpdateBegin
2. Any combination of:
   - VmDirIndexSchedule
   - VmDirIndexDelete
   - VmDirIndexAddUniquenessScope
   - VmDirIndexDeleteUniquenessScope
3. VmDirIndexUpdateCommit (if step 2 succeeded)
4. VmDirIndexUpdateAbort (if step 2 or 3 failed)

Successfully committed updates will be picked up by the indexing thread
at the beginning of each cycle

Change-Id: Ifd685d9af4ebd32328e3f6ba4049fd034915d7c8

--- a/vmdir/server/indexcfg/Makefile.am
+++ b/vmdir/server/indexcfg/Makefile.am
@@ -7,6 +7,7 @@ libindexcfg_la_SOURCES = \
     indexcfg.c \
     indexingtask.c \
     indexingthr.c \
+    indexupd.c \
     libmain.c \
     progress.c \
     vmit.c
