Updates per container upgrade.
Don't start lwsmd until after configure-lightwave-server.service has finished.
lwsm isn't shutting synchronously, so wait until it's gone before finishing.
Remove unused firewall service

Change-Id: I4e65a2f88bfe4fac4aa79ad9bced20de0d774e0a

--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -6,6 +6,11 @@ LW_SBIN_DIR=/opt/likewise/sbin
 _exit(){
     if [ $RUN_LWSM ]; then
         $LW_BIN_DIR/lwsm shutdown
+
+        while [ `pidof lwsmd` ];  do
+            sleep 1
+        done
+
     fi
 
     exit $1
@@ -268,7 +273,7 @@ if [[ "$DOMAIN_STATE" -eq 1 ]] && [[ `pidof init` -eq 1 ]]; then
     fi
 
     echo "Upgrade complete."
-    exit 0
+    _exit 0
 
 else
     case "$LOTUS_DEPLOYMENT" in
