If lwsm was started in configure-lightwave-server, then autostart all services.
Change-Id: Ie4d32e8368347d304c455feed661f4ffff68575a

--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -10,7 +10,6 @@ _exit(){
         while [ `pidof lwsmd` ];  do
             sleep 1
         done
-
     fi
 
     exit $1
@@ -276,6 +275,10 @@ if [[ "$DOMAIN_STATE" -eq 1 ]] && [[ `pidof init` -eq 1 ]]; then
     _exit 0
 
 else
+    if [ $RUN_LWSM ]; then
+        $LW_BIN_DIR/lwsm autostart
+    fi
+
     case "$LOTUS_DEPLOYMENT" in
         "standalone")
             $JAVA_HOME/bin/java -Djava.security.properties=$JAVA_SEC_PROP -cp $CLASSPATH \
