--- a/vmidentity/rest/idm/pom.xml
+++ b/vmidentity/rest/idm/pom.xml
@@ -16,9 +16,9 @@
 
   <modules>
     <module>common</module>
-
     <module>server</module>
     <module>client</module>
+    <module>samples</module>
   </modules>
 
 </project>
