--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -266,12 +266,12 @@ if [[ "$DOMAIN_STATE" -eq 1 ]] && [[ `pidof init` -eq 1 ]]; then
     # perform vmidentity upgrade
     #
     $JAVA_HOME/bin/java -Djava.security.properties=$JAVA_SEC_PROP -Dinstall.log.file=/var/log/vmware/sso/install-upgrade.log \
-          -cp $CLASSPATH com.vmware.identity.configure.VMIdentityStandaloneInstaller --upgrade 
-          
+          -cp $CLASSPATH com.vmware.identity.configure.VMIdentityStandaloneInstaller --upgrade --start-service
     if [ $? -ne 0 ]; then
         echo "VMIdentity upgrade failed."
         _exit 1
-    fi 
+    fi
+
     # Upgrade successful, restart lwsm to insure all changes are applied and node is replicating
     if [ -z $RUN_LWSM ]; then
         systemctl restart lwsmd
