Bug 1721935: STS Service doesn't come up on container
Change-Id: Ib65004706e4c4fcf51bee47d83df1d87881a8622

--- a/vmidentity/config/vmware-idmd.service.in
+++ b/vmidentity/config/vmware-idmd.service.in
@@ -6,6 +6,7 @@ Requires=lwsmd.service
 [Service]
 Type=forking
 ExecStart=@VMSTS_SBIN_DIR@/vmware-idmd.sh start
+PIDFile=/var/run/vmware-idmd.pid
 
 [Install]
 WantedBy=multi-user.target
