Bug 1721935 : remove lwsm dependency from vmware-idmd service
Change-Id: If84c0d7856b625b540c2a494910a57f92b7b4e56

--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -265,6 +265,9 @@ if [[ "$DOMAIN_STATE" -eq 1 ]] && [[ `pidof init` -eq 1 ]]; then
 
     # perform vmidentity upgrade
     #
+    if [ $RUN_LWSM ]; then
+        $LW_BIN_DIR/lwsm autostart
+    fi
     $JAVA_HOME/bin/java -Djava.security.properties=$JAVA_SEC_PROP -Dinstall.log.file=/var/log/vmware/sso/install-upgrade.log \
           -cp $CLASSPATH com.vmware.identity.configure.VMIdentityStandaloneInstaller --upgrade --start-service
     if [ $? -ne 0 ]; then
