Bug 1721935 : remove lwsm dependency from vmware-idmd service
Change-Id: If84c0d7856b625b540c2a494910a57f92b7b4e56

--- a/vmidentity/config/vmware-idmd.sh.in
+++ b/vmidentity/config/vmware-idmd.sh.in
@@ -37,14 +37,26 @@ StartService()
     echo "Configuring IDM registry entries in likewise from : $IDM_REGISTRY_FILE_PATH"
     $LIKEWISE_LWREGSHELL import $IDM_REGISTRY_FILE_PATH
     rc=$?
+    while [ -z `pidof vmdird` ]; do
+	sleep 5
+    done
+
+    while [ -z `pidof vmafdd` ]; do
+	sleep 5
+    done
+
+    while [ -z `pidof vmcad` ]; do
+	sleep 5
+    done
+
     if [ $rc -ne 0 ]; then
         echo "Failed to configure IDM registry entries in likewise. Error code : $rc"
     fi
- 
+
     if [ ! -d "$SERVICE_LOG_DIR" ]; then
         /bin/mkdir -p $SERVICE_LOG_DIR
     fi
-  
+ 
     $JSVC_BIN -procname $SERVICE_NAME \
               -server \
               $JVM_MEM_ARGS \
