Fixed open likewise version dependencies Bumped patch number for most rpms. Added strict dependency between server and client rpms. Added explicit dependencies for meta rpms Meta rpms are now getting versions from makedefs.mk
        Change-Id: Ieec49bb9e6732dcc7a6a0796581ed09b39b29382

--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -12,6 +12,13 @@ _exit(){
         done
     fi
 
+    # if failed container upgrade, keep vmdir in standalone mode
+    if [ $1 -eq 2 ]; then
+        while true; do
+            sleep 5
+        done
+    fi
+
     exit $1
 }
 
@@ -262,7 +269,7 @@ if [[ "$DOMAIN_STATE" -eq 1 ]] && [[ `pidof init` -eq 1 ]]; then
 
     if [ $? -ne 0 ]; then
         echo  "Upgrade failed."
-        _exit 1
+        _exit 2
     fi
 
     # perform vmidentity upgrade
@@ -274,7 +281,7 @@ if [[ "$DOMAIN_STATE" -eq 1 ]] && [[ `pidof init` -eq 1 ]]; then
           -cp $CLASSPATH com.vmware.identity.configure.VMIdentityStandaloneInstaller --upgrade --start-service
     if [ $? -ne 0 ]; then
         echo "VMIdentity upgrade failed."
-        _exit 1
+        _exit 2
     fi
 
     # Upgrade successful, restart lwsm to insure all changes are applied and node is replicating
