Adding support for container install/upgrade/restart (Merging commits)
Change-Id: I745aaceb28c23c695488d4495708a91c493279d8

--- a/config/configure.ac
+++ b/config/configure.ac
@@ -480,6 +480,7 @@ AC_CONFIG_FILES([Makefile
                  tools/ic-join/Makefile
                  scripts/Makefile
                  scripts/configure-lightwave-server
+                 scripts/configure-identity-server
                 ])
 AC_OUTPUT
 
