--- a/config/scripts/Makefile.am
+++ b/config/scripts/Makefile.am
@@ -1,5 +1,6 @@
 bin_SCRIPTS = \
     @top_builddir@/scripts/configure-lightwave-server \
+    @top_builddir@/scripts/configure-identity-server \
     @top_srcdir@/scripts/domainjoin.sh 
 
 scriptsconf_SCRIPTS = \
