--- a/vmidentity/config/vmware-idmd.service.in
+++ b/vmidentity/config/vmware-idmd.service.in
@@ -1,6 +1,7 @@
 [Unit]
 Description=VMware Identity Manager Service
 After=syslog.target network.target
+Requires=lwsmd.service
 
 [Service]
 Type=forking
