--- a/vmidentity/config/vmware-idmd.service.in
+++ b/vmidentity/config/vmware-idmd.service.in
@@ -1,11 +1,11 @@
 [Unit]
 Description=VMware Identity Manager Service
 After=syslog.target network.target
+Requires=lwsmd.service
 
 [Service]
 Type=forking
 ExecStart=@VMSTS_SBIN_DIR@/vmware-idmd.sh start
-PIDFile=/var/run/vmware-idmd.pid
 
 [Install]
 WantedBy=multi-user.target
