Instrumentation to track urgent replication mutex. Add response at end of replication cycle. Add ConditionTimedWait in Milliseconds Add debugging symbols and profiling flags Change-Id: Ia44745cec52f9e3d547b6a6cc59f9a4d80c89347

--- a/vmdir/configure.ac
+++ b/vmdir/configure.ac
@@ -31,7 +31,7 @@ esac
 CPPFLAGS="$CPPFLAGS -D_REENTRANT -D_GNU_SOURCE -fPIC"
 
 AM_CPPFLAGS="$AM_CPPFLAGS -I${top_srcdir}/include"
-AM_CFLAGS="$AM_CFLAGS -Wall -Werror -fno-strict-aliasing"
+AM_CFLAGS="$AM_CFLAGS -Wall -Werror -fno-strict-aliasing -fprofile-arcs -ftest-coverage -ggdb"
 
 AC_SUBST(AM_CPPFLAGS)
 AC_SUBST(AM_CFLAGS)
