--- a/config/jdepends/build.xml
+++ b/config/jdepends/build.xml
@@ -22,26 +22,26 @@
        <resources>
 
           <!-- CORE (COMPILE_TIME + RUN_TIME)DEPENDENCIES -->
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/commons-lang/commons-lang/2.5/commons-lang-2.5.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/net/java/dev/jna/jna/3.5.1/jna-3.5.1.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/net/java/dev/jna/platform/3.5.1/platform-3.5.1.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/commons-codec/commons-codec/1.4/commons-codec-1.4.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/org/slf4j/jcl-over-slf4j/1.7.10/jcl-over-slf4j-1.7.10.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/org/apache/logging/log4j/log4j-1.2-api/2.0.2/log4j-1.2-api-2.0.2.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/org/apache/logging/log4j/log4j-core/2.2/log4j-core-2.2.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/org/apache/logging/log4j/log4j-api/2.2/log4j-api-2.2.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/org/apache/logging/log4j/log4j-slf4j-impl/2.2/log4j-slf4j-impl-2.2.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central//org/slf4j/slf4j-api/1.7.10/slf4j-api-1.7.10.jar" />
+          <url url="http://central.maven.org/maven2/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" />
+          <url url="http://central.maven.org/maven2/commons-lang/commons-lang/2.5/commons-lang-2.5.jar" />
+          <url url="http://central.maven.org/maven2/net/java/dev/jna/jna/4.2.1/jna-4.2.1.jar" />
+          <url url="http://central.maven.org/maven2/net/java/dev/jna/jna-platform/4.2.1/jna-platform-4.2.1.jar" />
+          <url url="http://central.maven.org/maven2/commons-codec/commons-codec/1.4/commons-codec-1.4.jar" />
+          <url url="http://central.maven.org/maven2/org/slf4j/jcl-over-slf4j/1.7.10/jcl-over-slf4j-1.7.10.jar" />
+          <url url="http://central.maven.org/maven2/org/apache/logging/log4j/log4j-1.2-api/2.0.2/log4j-1.2-api-2.0.2.jar" />
+          <url url="http://central.maven.org/maven2/org/apache/logging/log4j/log4j-core/2.2/log4j-core-2.2.jar" />
+          <url url="http://central.maven.org/maven2/org/apache/logging/log4j/log4j-api/2.2/log4j-api-2.2.jar" />
+          <url url="http://central.maven.org/maven2/org/apache/logging/log4j/log4j-slf4j-impl/2.2/log4j-slf4j-impl-2.2.jar" />
+          <url url="http://central.maven.org/maven2/org/slf4j/jcl-over-slf4j/1.7.10/jcl-over-slf4j-1.7.10.jar" />
          
           <!-- TEST DEPENDENCIES -->
-           <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/org/powermock/powermock-easymock-release-full/1.6.2/powermock-easymock-release-full-1.6.2-full.jar" />
+           <url url="http://central.maven.org/maven2/org/powermock/powermock-easymock-release-full/1.6.2/powermock-easymock-release-full-1.6.2-full.jar" />
 
          </resources>
      </copy>
    
-     <move file="${depends}/jna-3.5.1.jar" tofile="${depends}/jna.jar" />
-     <move file="${depends}/platform-3.5.1.jar" tofile="${depends}/platform.jar" />    
+     <move file="${depends}/jna-4.2.1.jar" tofile="${depends}/jna.jar" />
+     <move file="${depends}/jna-platform-4.2.1.jar" tofile="${depends}/platform.jar" />    
     
    </target>
 
