--- a/vmafd/jdepends/build.xml
+++ b/vmafd/jdepends/build.xml
@@ -22,19 +22,19 @@
        <resources>
 
           <!-- CORE (COMPILE_TIME + RUN_TIME)DEPENDENCIES -->
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/commons-lang/commons-lang/2.5/commons-lang-2.5.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/net/java/dev/jna/jna/3.5.1/jna-3.5.1.jar" />
-          <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/net/java/dev/jna/platform/3.5.1/platform-3.5.1.jar" />
+          <url url="http://central.maven.org/maven2/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar" />
+          <url url="http://central.maven.org/maven2/commons-lang/commons-lang/2.5/commons-lang-2.5.jar" />
+          <url url="http://central.maven.org/maven2/net/java/dev/jna/jna/4.2.1/jna-4.2.1.jar" />
+          <url url="http://central.maven.org/maven2/net/java/dev/jna/jna-platform/4.2.1/jna-platform-4.2.1.jar" />
 
           <!-- TEST DEPENDENCIES -->
-           <url url="http://build-squid.eng.vmware.com/nexus/content/repositories/central/org/powermock/powermock-easymock-release-full/1.6.2/powermock-easymock-release-full-1.6.2-full.jar" />
+           <url url="http://central.maven.org/maven2/org/powermock/powermock-easymock-release-full/1.6.2/powermock-easymock-release-full-1.6.2-full.jar" />
 
          </resources>
      </copy>
    
-     <move file="${depends}/jna-3.5.1.jar" tofile="${depends}/jna.jar" />
-     <move file="${depends}/platform-3.5.1.jar" tofile="${depends}/platform.jar" />    
+     <move file="${depends}/jna-4.2.1.jar" tofile="${depends}/jna.jar" />
+     <move file="${depends}/jna-platform-4.2.1.jar" tofile="${depends}/platform.jar" />    
     
    </target>
 
