Adding Copyright license headers on missed vmidentity files
Change-Id: I375eff1951a8a7952c2dbaf2115de6a3e56a5249

--- a/vmidentity/rest/idm/server/src/main/resources/log4j.properties
+++ b/vmidentity/rest/idm/server/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # **********************************************************************
-# Copyright 2015 VMware, Inc.  All rights reserved. VMware Confidential
+# Copyright 2015 VMware, Inc.  All rights reserved.
 # **********************************************************************
 
 ########################################################################
@@ -8,8 +8,7 @@
 # to redirect jdk logging to slf4j. This properties file is used for the same purpose. i.e to configure slf4j using log4j implementation.
 ########################################################################
 # Configure root logs
-# TODO : Modify the root log level to INFO later.
-log4j.rootLogger=DEBUG, LOGFILE
+log4j.rootLogger=INFO, LOGFILE
 
 # Configure Apache logs
 log4j.logger.org.apache=WARN
