--- a/vmidentity/rest/Makefile.am
+++ b/vmidentity/rest/Makefile.am
@@ -11,7 +11,8 @@ vmstsjars_DATA= \
     @top_builddir@/vmware-sts/packages/vmware-identity-rest-core-client.jar \
     @top_builddir@/vmware-sts/packages/vmware-identity-rest-idm-client.jar \
     @top_builddir@/vmware-sts/packages/vmware-identity-rest-afd-client.jar \
-    @top_builddir@/vmware-sts/packages/vmware-identity-rest-idm-samples.jar 
+    @top_builddir@/vmware-sts/packages/vmware-identity-rest-idm-samples.jar \
+    @top_builddir@/vmware-sts/packages/vmware-directory-rest-client.jar 
 
 @top_builddir@/vmware-sts/packages/vmware-identity-rest-idm-server.jar : jar
 @top_builddir@/vmware-sts/packages/vmware-identity-rest-idm-common.jar : jar
@@ -23,9 +24,10 @@ vmstsjars_DATA= \
 @top_builddir@/vmware-sts/packages/vmware-identity-rest-idm-client.jar : jar
 @top_builddir@/vmware-sts/packages/vmware-identity-rest-afd-client.jar : jar
 @top_builddir@/vmware-sts/packages/vmware-identity-rest-idm-samples.jar : jar
+@top_builddir@/vmware-sts/packages/vmware-directory-rest-client.jar : jar
 
 all: jar
 
 jar:
-	@echo "Building REST IDM/AFD/Common Jars"
+	@echo "Building REST IDM/AFD/VMDIR/Common Jars"
 	cd @top_srcdir@/rest && @JAVA@ -Xmx128m -Xms64m -Xss1024k -classpath "$(CLASSPATH)" -Dant.home="@ANT_HOME@" -Djre.home="@JAVA_HOME@/jre" -Dmaven.home="@MAVEN_HOME@" org.apache.tools.ant.launch.Launcher $(ANT_VERBOSE) -f build.xml build
