Add rule to help build docker image directly from published RPMs Include version in the docker image tag
Change-Id: I94712071b06d3a366f598eb22afda1f86a4a0287

--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -1,7 +1,9 @@
-FROM vmware/photon:latest
+FROM vmware/photon:1.0
 MAINTAINER "Jonathan Brown" <brownj@vmware.com>
 ENV container=docker
 VOLUME ["/sys/fs/cgroup"]
+LABEL vendor="VMware, Inc."
+LABEL com.vmware.lightwave.version="1.0.0"
 
 # install systemd
 RUN tdnf update --refresh -y tdnf; \
