New schema management tool
Bug:
https://bugzilla.eng.vmware.com/show_bug.cgi?id=1729284

Code reviews:
https://reviewboard.eng.vmware.com/r/1028531/
https://reviewboard.eng.vmware.com/r/1029064/
https://reviewboard.eng.vmware.com/r/1029147/

Change-Id: Ie3c0ede3e2d1d40ae8f8bc39c112deaae6ab5f66

--- a/vmdir/common/Makefile.am
+++ b/vmdir/common/Makefile.am
@@ -35,6 +35,7 @@ libcommon_la_SOURCES = \
     util.c \
     schema/compat.c \
     schema/copy.c \
+    schema/def.c \
     schema/deflist.c \
     schema/diff.c \
     schema/file.c \
@@ -42,9 +43,12 @@ libcommon_la_SOURCES = \
     schema/load.c \
     schema/merge.c \
     schema/parse.c \
+    schema/patch.c \
     schema/resolve.c \
     schema/schema.c \
     schema/verify.c \
+    schema/legacy/legacyload.c \
+    schema/legacy/legacypatch.c \
     schema/legacy/legacyschema.c \
     schema/legacy/legacyschemamod.c \
     schema/legacy/legacyutil.c
