--- a/vmdir/configure.ac
+++ b/vmdir/configure.ac
@@ -573,6 +573,7 @@ AC_CONFIG_FILES([Makefile
                  tools/vdcleavefed/Makefile
                  tools/vdcresetMachineActCred/Makefile
                  tools/vdcmetric/Makefile
+                 tools/vdcschema/Makefile
                  tools/test/Makefile
                  tools/test/circularbuffer/Makefile
                  tools/test/dequetest/Makefile
