change syslog-ng.conf to have MS level timestamp

--- a/vmafd/config/vmafdd-syslog-ng.conf
+++ b/vmafd/config/vmafdd-syslog-ng.conf
@@ -1,3 +1,4 @@
 destination d_vmafdd{ file("/var/log/lightwave/vmafdd.log"); };
 filter f_vmafdd { program("vmafdd"); };
 log { source(s_local); filter(f_vmafdd); destination(d_vmafdd); };
+options { frac_digits(3); };
