--- a/vmca/config/vmcad-syslog-ng.conf
+++ b/vmca/config/vmcad-syslog-ng.conf
@@ -1,3 +1,4 @@
 destination d_vmcad{ file("/var/log/lightwave/vmcad.log"); };
 filter f_vmcad{ program("vmcad"); };
 log { source(s_local); filter(f_vmcad); destination(d_vmcad); };
+options { frac_digits(3); };
