--- a/vmdir/config/vmdird-syslog-ng.conf
+++ b/vmdir/config/vmdird-syslog-ng.conf
@@ -1,3 +1,4 @@
 destination d_vmdird { file("/var/log/lightwave/vmdird.log"); };
 filter f_vmdird { program("vmdird"); };
 log { source(s_local); filter(f_vmdird); destination(d_vmdird); };
+options { frac_digits(3); };
